package stest.tron.wallet.dailybuild.trctoken;

import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import lombok.extern.slf4j.Slf4j;
import org.junit.Assert;
import org.testng.annotations.AfterClass;
import org.testng.annotations.BeforeClass;
import org.testng.annotations.BeforeSuite;
import org.testng.annotations.Test;
import org.tron.api.WalletGrpc;
import org.tron.api.WalletSolidityGrpc;
import org.tron.common.crypto.ECKey;
import org.tron.common.utils.ByteArray;
import org.tron.common.utils.Utils;
import org.tron.core.Wallet;
import org.tron.protos.Protocol.TransactionInfo;
import stest.tron.wallet.common.client.Configuration;
import stest.tron.wallet.common.client.utils.Base58;
import stest.tron.wallet.common.client.utils.PublicMethed;

import java.util.ArrayList;
import java.util.List;
import java.util.Optional;
import java.util.concurrent.TimeUnit;

@Slf4j

public class ContractTrcToken078 {

	private final String testNetAccountKey = Configuration.getByPath("testng.conf")
			.getString("foundationAccount.key1");
	private final byte[] testNetAccountAddress = PublicMethed.getFinalAddress(testNetAccountKey);
	byte[] contractAddress = null;
	ECKey ecKey1 = new ECKey(Utils.getRandom());
	byte[] internalTxsAddress = ecKey1.getAddress();
	String testKeyForinternalTxsAddress = ByteArray.toHexString(ecKey1.getPrivKeyBytes());
	private Long maxFeeLimit = Configuration.getByPath("testng.conf")
			.getLong("defaultParameter.maxFeeLimit");
	private ManagedChannel channelSolidity = null;
	private ManagedChannel channelFull = null;
	private WalletGrpc.WalletBlockingStub blockingStubFull = null;
	private ManagedChannel channelFull1 = null;
	private WalletGrpc.WalletBlockingStub blockingStubFull1 = null;
	private WalletSolidityGrpc.WalletSolidityBlockingStub blockingStubSolidity = null;
	private String fullnode = Configuration.getByPath("testng.conf")
			.getStringList("fullnode.ip.list").get(0);

	/**
	 * constructor.
	 */

	public static String byte2HexStr(byte[] b, int offset, int length) {
		String stmp = "";
		StringBuilder sb = new StringBuilder("");
		for (int n = offset; n < offset + length && n < b.length; n++) {
			stmp = Integer.toHexString(b[n] & 0xFF);
			sb.append((stmp.length() == 1) ? "0" + stmp : stmp);
		}
		return sb.toString().toUpperCase().trim();
	}

	@BeforeSuite
	public void beforeSuite() {
		Wallet wallet = new Wallet();
	}

	/**
	 * constructor.
	 */

	@BeforeClass(enabled = true)
	public void beforeClass() {
		PublicMethed.printAddress(testKeyForinternalTxsAddress);
		channelFull = ManagedChannelBuilder.forTarget(fullnode)
				.usePlaintext(true)
				.build();
		blockingStubFull = WalletGrpc.newBlockingStub(channelFull);

		logger.info(Long.toString(PublicMethed.queryAccount(testNetAccountKey, blockingStubFull)
				.getBalance()));
	}

	@Test(enabled = true, description = "Origin test call")
	public void testOriginCall001() {
		PublicMethed
				.sendcoin(internalTxsAddress, 100000000000L, testNetAccountAddress, testNetAccountKey,
						blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		String contractName = "AAContract";
		String code = Configuration.getByPath("testng.conf")
				.getString("code.code_ContractTrcToken078_AddressTest1");
		String abi = Configuration.getByPath("testng.conf")
				.getString("abi.abi_ContractTrcToken078_AddressTest1");

		contractAddress = PublicMethed.deployContract(contractName, abi, code, "", maxFeeLimit,
				1000000L, 100, null, testKeyForinternalTxsAddress,
				internalTxsAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		String contractName1 = "BContract";
		String code1 = Configuration.getByPath("testng.conf")
				.getString("code.code_ContractTrcToken078_AddressTest2");
		String abi1 = Configuration.getByPath("testng.conf")
				.getString("abi.abi_ContractTrcToken078_AddressTest2");
		byte[] contractAddress1 = PublicMethed
				.deployContract(contractName1, abi1, code1, "", maxFeeLimit,
						1000000L, 100, null, testKeyForinternalTxsAddress,
						internalTxsAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		String contractName2 = "CContract";
		String code2 = Configuration.getByPath("testng.conf")
				.getString("code.code_ContractTrcToken078_AddressTest3");
		String abi2 = Configuration.getByPath("testng.conf")
				.getString("abi.abi_ContractTrcToken078_AddressTest3");
		byte[] contractAddress2 = PublicMethed
				.deployContract(contractName2, abi2, code2, "", maxFeeLimit,
						1000000L, 100, null, testKeyForinternalTxsAddress,
						internalTxsAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		String initParmes = "\"" + Base58.encodeBase58(contractAddress1)
				+ "\",\"" + Base58.encodeBase58(contractAddress2) + "\"";

		String txid2 = "";
		txid2 = PublicMethed.triggerContract(contractAddress,
				"sendToB2(address,address)", initParmes, false,
				0, maxFeeLimit, internalTxsAddress, testKeyForinternalTxsAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		Optional<TransactionInfo> infoById2 = null;
		infoById2 = PublicMethed.getTransactionInfoById(txid2, blockingStubFull);
		Assert.assertTrue(infoById2.get().getResultValue() == 0);


	}

	@Test(enabled = true, description = "Origin test delegatecall")
	public void testOriginDelegatecall001() {
		PublicMethed
				.sendcoin(internalTxsAddress, 100000000000L, testNetAccountAddress, testNetAccountKey,
						blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		String contractName = "AAContract";
		String code = Configuration.getByPath("testng.conf")
				.getString("code.code_ContractTrcToken078_AddressTest4");
		String abi = Configuration.getByPath("testng.conf")
				.getString("abi.abi_ContractTrcToken078_AddressTest4");

		contractAddress = PublicMethed.deployContract(contractName, abi, code, "", maxFeeLimit,
				1000000L, 100, null, testKeyForinternalTxsAddress,
				internalTxsAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		String contractName1 = "BContract";
		String code1 = Configuration.getByPath("testng.conf")
				.getString("code.code_ContractTrcToken078_AddressTest5");
		String abi1 = Configuration.getByPath("testng.conf")
				.getString("abi.abi_ContractTrcToken078_AddressTest5");
		byte[] contractAddress1 = PublicMethed
				.deployContract(contractName1, abi1, code1, "", maxFeeLimit,
						1000000L, 100, null, testKeyForinternalTxsAddress,
						internalTxsAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		String contractName2 = "CContract";
		String code2 = Configuration.getByPath("testng.conf")
				.getString("code.code_ContractTrcToken078_AddressTest6");
		String abi2 = Configuration.getByPath("testng.conf")
				.getString("abi.abi_ContractTrcToken078_AddressTest6");
		byte[] contractAddress2 = PublicMethed
				.deployContract(contractName2, abi2, code2, "", maxFeeLimit,
						1000000L, 100, null, testKeyForinternalTxsAddress,
						internalTxsAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		String initParmes = "\"" + Base58.encodeBase58(contractAddress1)
				+ "\",\"" + Base58.encodeBase58(contractAddress2) + "\"";

		String txid2 = "";
		txid2 = PublicMethed.triggerContract(contractAddress,
				"sendToB(address,address)", initParmes, false,
				0, maxFeeLimit, internalTxsAddress, testKeyForinternalTxsAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		Optional<TransactionInfo> infoById2 = null;
		infoById2 = PublicMethed.getTransactionInfoById(txid2, blockingStubFull);
		Assert.assertTrue(infoById2.get().getResultValue() == 0);


	}

	private List<String> getStrings(byte[] data) {
		int index = 0;
		List<String> ret = new ArrayList<>();
		while (index < data.length) {
			ret.add(byte2HexStr(data, index, 32));
			index += 32;
		}
		return ret;
	}

	/**
	 * constructor.
	 */

	public byte[] subByte(byte[] b, int off, int length) {
		byte[] b1 = new byte[length];
		System.arraycopy(b, off, b1, 0, length);
		return b1;

	}

	/**
	 * constructor.
	 */

	@AfterClass
	public void shutdown() throws InterruptedException {
		if (channelFull != null) {
			channelFull.shutdown().awaitTermination(5, TimeUnit.SECONDS);
		}
	}
}
